--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -47,6 +47,9 @@ jobs:
     needs: build-and-scan
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Azure Login
         uses: azure/login@v1
         with:
