--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "51.4.56.167.nip.io"
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
